syntax = "proto3";
package flowprotob;

option java_package = "com.cloudflare.net.flowagg";
option java_outer_classname = "FlowMessagePb";

message FlowMessage {

  enum FlowType {
    FLOWUNKNOWN = 0;
    NFV9 = 9;
    IPFIX = 10;
    SFLOW = 5;
  }
  FlowType Type = 1;

  uint64 TimeRecvd = 2;
  uint64 SamplingRate = 3;
  uint32 SequenceNum = 4;

  // Found inside packet
  uint64 TimeFlow = 5;

  // Source/destination addresses
  bytes SrcIP = 6; 
  bytes DstIP = 7;

  // To be deprecated
  enum IPType {
    IPUNKNOWN = 0;
    IPv4 = 4;
    IPv6 = 6;
  }
  IPType IPversion = 8;

  // Size of the sampled packet
  uint64 Bytes = 9;
  uint64 Packets = 10;

  // Routing information
  bytes RouterAddr = 11;
  bytes NextHop = 12;
  uint32 NextHopAS = 13;

  // Autonomous system information
  uint32 SrcAS = 14;
  uint32 DstAS = 15;

  // Prefix size
  uint32 SrcNet = 16;
  uint32 DstNet = 17;

  // Interfaces
  uint32 SrcIf = 18;
  uint32 DstIf = 19;

  // Layer 4 protocol
  uint32 Proto = 20;

  // Port for UDP and TCP
  uint32 SrcPort = 21;
  uint32 DstPort = 22;

  // IP and TCP special flags
  uint32 IPTos = 23;
  uint32 ForwardingStatus = 24;
  uint32 IPTTL = 25;
  uint32 TCPFlags = 26;

  // Ethernet information
  uint64 SrcMac = 27;
  uint64 DstMac = 28;

  // 802.1q VLAN in sampled packet
  uint32 VlanId = 29;

  // Layer 3 protocol (IPv4/IPv6/ARP/...)
  uint32 Etype = 30;

  uint32 IcmpType = 31;
  uint32 IcmpCode = 32;

  // Vlan
  uint32 SrcVlan = 33;
  uint32 DstVlan = 34;

  // Fragments (IPv4/IPv6)
  uint32 FragmentId = 35;
  uint32 FragmentOffset = 36;

  uint32 IPv6FlowLabel = 37;

  string SrcCountry = 100;
  string DstCountry = 101;
  uint32 SrcASDB = 102;
  uint32 DstASDB = 103;
  
  string SrcIpStr = 1001;
  string DstIpStr = 1002;
  
}